Added a contact page and further css
Added:
- a contact page
- more styling to the exhibitions
- a footer
- corrected links from the Offcanvas nav

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="https://folksy.com/shops/TheHedgerowArtist" active target="_blank">Folksy</a></li>
                 <li><a href="exhibitions.html">Exhibitions</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -55,80 +55,32 @@
 
     <!-- Hero -->
 
-    <div class="container text-center pt-5 ">
+    <div class="container pt-5 ">
         <div class="row align-items-center ">
             <div class="col ">
-                <img src="img\Rabbits-banner.png" alt="" class="image-fluid hero-banner shadow-lg">
+                <img src="img\About-img.png" alt="" class="image-fluid hero-banner shadow-lg">
+            </div>
+            <div class="col">
+                <form action="https://formspree.io/f/xpzekyvv"
+                      method="POST" class="contact-form col-sm align-self-center ">
+                    <div class="form-group">
+                        <h2 class="col-12">If you have any special requests, please send me a message on social media or using the form below.</h2>
+                    </div>
+                    <div class="form-group">
+                        <label for="email-input">Email address</label>
+                        <input type="email" class="form-control" id="email-input" placeholder="name@example.com">
+                    </div>
+                    <div class="form-group">
+                        <label for="message-input">Example textarea</label>
+                        <textarea class="form-control" id="message-input" rows="3"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-outline-dark bg-white" id="submit-btn">Submit</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
-
-
-    <!-- Gallery -->
-
-    <a href="https://folksy.com/shops/TheHedgerowArtist" target="_blank">
-        <div class="container text-center">
-            <div class="row align-items-center gallery-row-1 my-3">
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\Bird-sunset.jpg" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\birds-tree.jpg" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\Puffins.jpg" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-            </div>
-            <div class="row align-items-center gallery-row-2 my-3">
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\puffin-jumpers.png" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\Cards-img.png" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\Pillow-image.png" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-            </div>
-            <div class="row align-items-center gallery-row-3 my-3">
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\Heron.png" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\Insect-hotel.jpg" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\King-fisher.png" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-            </div>
-            <div class="row align-items-center gallery-row-4 my-3">
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\Puffins.png" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\Hare.jpg" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\Rabbits-1.png" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-            </div>
-        </div>
-    </a>
-    <div class="container my-5">
-        <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 shadow-lg">
-            <div class="col-lg-7 p-3 p-lg-5 pt-lg-3 bottom-link-h1">
-                <h1 class="display-4 fw-bold lh-1 text-body-emphasis ">Have a wander through my shop...</h1>
-                <p class="lead">Pick yourself up an original painting, digital print, cushion, lampshade, and maybe a card or two!</p>
-                <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-                    <button type="button" class="btn btn-outline-dark btn-lg px-4 me-md-2 fw-bold"><a href="https://folksy.com/shops/TheHedgerowArtist">To Folksy!</a></button>
-                </div>
-            </div>
-            <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-                <img class="rounded-lg-3" src="img\HL-Cow.png" alt="" width="720">
-            </div>
-        </div>
-    </div>
-    <!-- </div> -->
 
     <!-- footer -->
 
