--- a/exhibitions.html
+++ b/exhibitions.html
@@ -53,67 +53,70 @@
     </button>
 
 
-    <!-- Hero -->
+    <!-- Gallery -->
 
-    <div class="container text-center pt-5 ">
-        <div class="row align-items-center ">
-            <div class="col ">
-                <img src="img\Rabbits-banner.png" alt="" class="image-fluid hero-banner shadow-lg">
+    <div class="gallery container">
+        <div class="row">
+            <div class="gallery-card col-xl-3 col-lg-4 col-md-6">
+                <img src="img\Exhibitions-imgs\uc-5.png" alt="a fairground at nighttime full of a large crowd of people and a few different brightly lit attractions">
+                <p>UPCOMING, Scarborough Sparkles Christmas Market, 24th-26th Nov 2023</p>
+            </div>
+            <div class="gallery-card col-xl-3 col-lg-4 col-md-6">
+                <img src="img\Exhibitions-imgs\uc-3.png" alt="a busy pavement full of people walking by lots of art hung on a long fence">
+                <p>UPCOMING, York River Art Market, 20th Aug 2023</p>
+            </div>
+            <div class="gallery-card col-xl-3 col-lg-4 col-md-6">
+                <img src="img\Exhibitions-imgs\uc-4.png" alt="colorful flowers at the front of the image with a large manor house behind them and a blue sky">
+                <p>UPCOMING, Burton Agnes Autumn Fair, 7th-8th Aug 2023</p>
+            </div>
+            <div class="gallery-card col-xl-3 col-lg-4 col-md-6">
+                <img src="img\Exhibitions-imgs\uc-1.png"
+                     alt="a view of a few small crowds of people standing on a grassy field with a marquee, a chateau and a view of the open countryside in the distance">
+                <p>Duncombe Park County Fair, 1st May 2023</p>
+            </div>
+
+            <div class="gallery-card col-xl-3 col-lg-4 col-md-6 gallery-row-2">
+                <img src="img\Exhibitions-imgs\uc-2.png" alt="an aerial view of Scampston Hall's walled garden in the Summer">
+                <p>Scampston Hall Walled Garden, April-May 2023</p>
+            </div>
+            <div class="gallery-card col-xl-3 col-lg-4 col-md-6 gallery-row-2">
+                <img src="img\Exhibitions-imgs\1.jpg" alt="pictures and art goods stacked on a glass shelf in a shop">
+                <p>Artist collective at the Stephen Joseph Theatre, ongoing</p>
+            </div>
+            <div class="gallery-card col-xl-3 col-lg-4 col-md-6 gallery-row-2">
+                <img src="img\Exhibitions-imgs\2.jpg" alt="7 paintings hung up on the side of a wall">
+                <p>Seagrown exhibition, on ship, Dec 2022</p>
+            </div>
+            <div class="gallery-card col-xl-3 col-lg-4 col-md-6 gallery-row-2">
+                <img src="img\Exhibitions-imgs\3.jpg" alt="a Christmas market stand full of different art products in a hall">
+                <p>Etsy Christmas Market, Dec 2022</p>
+            </div>
+            <div class="gallery-card col-xl-3 col-lg-4 col-md-6 gallery-row-3">
+                <img src="img\Exhibitions-imgs\4.jpg" alt="a number of art products on display inside a shed">
+                <p>Scarborough Sparkles Christmas Market, 2022 #1</p>
+            </div>
+            <div class="gallery-card col-xl-3 col-lg-4 col-md-6 gallery-row-3">
+                <img src="img\Exhibitions-imgs\5.jpg" alt="a shed seen from the outside with a number of art products on display inside and outside">
+                <p>Scarborough Sparkles Christmas Market, 2022 #2</p>
+            </div>
+            <div class="gallery-card col-xl-3 col-lg-4 col-md-6 gallery-row-3">
+                <img src="img\Exhibitions-imgs\7.jpg" alt="a market stand inside a marquee with a man standing behind it">
+                <p>Burton Agnes Stately Home Autumn Fair, 2022</p>
+            </div>
+            <div class="gallery-card col-xl-3 col-lg-4 col-md-6 gallery-row-3">
+                <img src="img\Exhibitions-imgs\8.jpg" alt="a number of art products and a bookshelf inside a shop window, seen from the outside">
+                <p>Gallery6, July 2022</p>
+            </div>
+            <div class="gallery-card col-xl-3 col-lg-4 col-md-6 gallery-row-4">
+                <img src="img\Exhibitions-imgs\9.jpg" alt="a number of art products inside a shop window, seen from the outside">
+                <p>Animal Art Gallery, Feb 2022 #1</p>
+            </div>
+            <div class="gallery-card col-xl-3 col-lg-4 col-md-6 gallery-row-4">
+                <img src="img\Exhibitions-imgs\10.jpg" alt="pictures and art goods stacked on a shelf and hung on the wall in a shop">
+                <p>Animal Art Gallery, Feb 2022 #2</p>
             </div>
         </div>
     </div>
-
-
-    <!-- Gallery -->
-
-    <a href="https://folksy.com/shops/TheHedgerowArtist" target="_blank">
-        <div class="container text-center">
-            <div class="row align-items-center gallery-row-1 my-3">
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\Bird-sunset.jpg" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\birds-tree.jpg" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\Puffins.jpg" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-            </div>
-            <div class="row align-items-center gallery-row-2 my-3">
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\puffin-jumpers.png" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\Cards-img.png" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\Pillow-image.png" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-            </div>
-            <div class="row align-items-center gallery-row-3 my-3">
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\Heron.png" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\Insect-hotel.jpg" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\King-fisher.png" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-            </div>
-            <div class="row align-items-center gallery-row-4 my-3">
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\Puffins.png" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\Hare.jpg" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-                <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\Rabbits-1.png" alt="" class="image-responsive gallery-item shadow-lg">
-                </div>
-            </div>
-        </div>
-    </a>
     <div class="container my-5">
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 shadow-lg">
             <div class="col-lg-7 p-3 p-lg-5 pt-lg-3 bottom-link-h1">
@@ -168,20 +171,19 @@
         }); </script>
     <script> ScrollOut({
             targets: ".gallery-row-2",
-            offset: 300
+            offset: 100
         }); </script>
     <script> ScrollOut({
             targets: ".gallery-row-3",
-            offset: 600
+            offset: 200
         }); </script>
     <script> ScrollOut({
             targets: ".gallery-row-4",
-            offset: 900
+            offset: 300
         }); </script>
     <script src="../assets/js/color-modes.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ"
             crossorigin="anonymous"></script>
-
 
 </body>
 
