Added button + convert img to jpeg
Added a close button to the Offcanvas as it was difficult to close on mobile

Converted all PNG images to jpeg to improve accessibility

--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,9 @@
     <!-- Offcanvas Sidebar -->
 
     <div class="offcanvas offcanvas-start" id="offcanvas">
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         <div class="offcanvas-header">
-            <a class="offcanvas-logo image-fluid" href="index.html"><img src="img/logo.png" alt="" height="300"></a>
+            <a class="offcanvas-logo image-fluid" href="index.html"><img src="img/logo.jpg" alt="" height="300"></a>
         </div>
         <div class="offcanvas-body">
             <ul class="offcanvas-li">
@@ -55,10 +56,10 @@
 
     <!-- Hero -->
 
-    <div class="container pt-5 ">
+    <div class="container center-block d-block mx-auto">
         <div class="row align-items-center ">
             <div class="col ">
-                <img src="img\About-img.png" alt="" class="image-fluid hero-banner shadow-lg">
+                <img src="img\About-img.jpg" alt="" class="image-fluid hero-banner shadow-lg mx-auto">
             </div>
             <div class="col">
                 <form action="https://formspree.io/f/xpzekyvv"
