--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
     <!-- Offcanvas Sidebar -->
 
     <div class="offcanvas offcanvas-start" id="offcanvas">
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         <div class="offcanvas-header">
-            <a class="offcanvas-logo image-fluid" href="index.html"><img src="img/logo.png" alt="" height="300"></a>
+            <a class="offcanvas-logo image-fluid" href="index.html"><img src="img/logo.jpg" alt="" height="300"></a>
         </div>
         <div class="offcanvas-body">
             <ul class="offcanvas-li">
@@ -55,10 +56,10 @@
 
     <!-- Hero -->
 
-    <div class="container text-center pt-5 ">
+    <div class="container text-center pt-5">
         <div class="row align-items-center ">
             <div class="col ">
-                <img src="img\Rabbits-banner.png" alt="" class="image-fluid hero-banner shadow-lg">
+                <img src="img\Rabbits-banner.jpg" alt="" class="image-fluid hero-banner shadow-lg">
             </div>
         </div>
     </div>
@@ -81,35 +82,35 @@
             </div>
             <div class="row align-items-center gallery-row-2 my-3">
                 <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\puffin-jumpers.png" alt="" class="image-responsive gallery-item shadow-lg">
+                    <img src="img\puffin-jumpers.jpg" alt="" class="image-responsive gallery-item shadow-lg">
                 </div>
                 <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\Cards-img.png" alt="" class="image-responsive gallery-item shadow-lg">
+                    <img src="img\Cards-img.jpg" alt="" class="image-responsive gallery-item shadow-lg">
                 </div>
                 <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\Pillow-image.png" alt="" class="image-responsive gallery-item shadow-lg">
+                    <img src="img\Pillow-image.jpg" alt="" class="image-responsive gallery-item shadow-lg">
                 </div>
             </div>
             <div class="row align-items-center gallery-row-3 my-3">
                 <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\Heron.png" alt="" class="image-responsive gallery-item shadow-lg">
+                    <img src="img\Heron.jpg" alt="" class="image-responsive gallery-item shadow-lg">
                 </div>
                 <div class="col-md-4 col-sm-12" class="img-gallery">
                     <img src="img\Insect-hotel.jpg" alt="" class="image-responsive gallery-item shadow-lg">
                 </div>
                 <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\King-fisher.png" alt="" class="image-responsive gallery-item shadow-lg">
+                    <img src="img\King-fisher.jpg" alt="" class="image-responsive gallery-item shadow-lg">
                 </div>
             </div>
             <div class="row align-items-center gallery-row-4 my-3">
                 <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\Puffins.png" alt="" class="image-responsive gallery-item shadow-lg">
+                    <img src="img\Puffins.jpg" alt="" class="image-responsive gallery-item shadow-lg">
                 </div>
                 <div class="col-md-4 col-sm-12" class="img-gallery">
                     <img src="img\Hare.jpg" alt="" class="image-responsive gallery-item shadow-lg">
                 </div>
                 <div class="col-md-4 col-sm-12" class="img-gallery">
-                    <img src="img\Rabbits-1.png" alt="" class="image-responsive gallery-item shadow-lg">
+                    <img src="img\Rabbits-1.jpg" alt="" class="image-responsive gallery-item shadow-lg">
                 </div>
             </div>
         </div>
@@ -124,7 +125,7 @@
                 </div>
             </div>
             <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-                <img class="rounded-lg-3" src="img\HL-Cow.png" alt="" width="720">
+                <img class="rounded-lg-3" src="img\HL-Cow.jpg" alt="" width="720">
             </div>
         </div>
     </div>
